# qmirt-gate-10-sim

./: .gitignore  Dockerfile  README.md
.github/workflows/: docker-image.yml
dev/: collimator_geometry.wrl
dev/jupyter/: analyze_dc_spect_mc_root_data.ipynb  collimator_geometry.wrl  dc_spect_analysis_memo.md  plot_sim_geom.ipynb  plot_sim_single_head.ipynb  plot_validation_geom.ipynb  read_marks_spreadsheet.ipynb  review_mc_root_data.ipynb
dev/python/qmirt-utility/: README.md  pyproject.toml
dev/python/qmirt-utility/qmirt_utility/plot/: __init__.py  wrl.py
dev/python/qmirt-utility/qmirt_utility/utils/: filesystem.py  formatting.py
payload/python/: check_sim_root_files.py  completed_jobs_root_check.csv  completed_root_files.txt  example_01.py  gate_sim_brain_spect_pixelated.py  gate_sim_dc_spect_pixelated_srm.py  gate_sim_dc_spect_pixelated_w_2mm_box.py  gate_sim_dc_spect_pixelated_w_box.py  generate_sparse_srm.py  generate_srm_cluster.py  merge_and_validate_root_check_csv.py  merge_srm.py  test_random_seed_gen.py
persistent_data/: GateMaterials.db
qmirt/: README.md  pyproject.toml
qmirt/doc/: index.md
qmirt/etc/: example.ini
qmirt/qmirt/: __init__.py
qmirt/qmirt/plot/: __init__.py
qmirt/qmirt/utils/: filesystem.py
qmirt/src/qmirt/: __init__.py
qmirt/src/qmirt/plot/: track.py  wrl.py
qmirt/src/qmirt/utils/: __init__.py  filesystem.py
results/brain_spect/: brain_spect_geometry.wrl  geometry_style.json  (+1 more)
slurm/: README.md  sbatch-wrapper.sh
submit_htcondor/: batch.sub  interactive.sub  run_batch.sh  wrapper.sh  wrapper_batch.sh
(+62 files in other folders)
