[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmirt-utility"
version = "0.1.0"
description = "Utilities for Gate10 geometry plotting and WRL handling"
authors = [ { name = "User", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "plotly",
]

[tool.setuptools.packages.find]
where = ["."]
